# modern-python-repo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  TODO.md  agents.md  claude.md  pyproject.toml
tests/: test_example.py
